--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <!-- Ana Banner -->
   <section class="hero">
     <h1>mehmet12ws</h1>
-    <p>Merhaba! Bu benim modern, minimalist ve benzersiz web sayfam. Siz de kendi projelerinizi paylaşabilirsiniz!</p>
+    <p>Hayat seninle güzel</p>
     <a href="#about">Hakkımda</a>
   </section>
 
