--- a/index.html
+++ b/index.html
@@ -1,275 +1,103 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>mehmet12ws | Modern Tasarım</title>
-  <style>
-    /* Temel Ayarlar */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Özel Yazı Tasarımı</title>
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: linear-gradient(45deg, #ff9a8b, #ff6a00, #ff9e2c);
+            background-size: 300% 300%;
+            animation: gradientBG 10s ease infinite;
+        }
 
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #121212;
-      color: #f3f3f3;
-      overflow-x: hidden;
-    }
+        @keyframes gradientBG {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
 
-    /* Navbar */
-    nav {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 50px;
-      background: rgba(0, 0, 0, 0.7);
-      backdrop-filter: blur(10px);
-      z-index: 1000;
-      transition: all 0.3s ease-in-out;
-    }
+        .container {
+            text-align: center;
+            color: white;
+            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
+        }
 
-    nav.scrolled {
-      background: rgba(0, 0, 0, 0.9);
-    }
+        h1 {
+            font-family: 'Dancing Script', cursive;
+            font-size: 3rem;
+            letter-spacing: 2px;
+            animation: fadeInText 3s ease-out;
+        }
 
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin: 0 15px;
-      font-size: 1.2rem;
-      transition: color 0.3s;
-    }
+        p {
+            font-family: 'Roboto', sans-serif;
+            font-size: 1.5rem;
+            margin-top: 20px;
+            letter-spacing: 1px;
+            opacity: 0;
+            animation: fadeInText 3s ease-out 1s forwards;
+        }
 
-    nav a:hover {
-      color: #4facfe;
-    }
+        @keyframes fadeInText {
+            0% {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
 
-    .logo {
-      font-size: 1.5rem;
-      font-weight: bold;
-      color: #4facfe;
-    }
+        /* Scroll animation */
+        .scroll-down {
+            margin-top: 40px;
+            font-size: 1.2rem;
+            color: #fff;
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 1px;
+            cursor: pointer;
+            animation: scrollFade 1.5s ease-out infinite alternate;
+        }
 
-    /* Hero */
-    .hero {
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      background: linear-gradient(to right, #4facfe, #00f2fe);
-      color: white;
-      position: relative;
-    }
+        @keyframes scrollFade {
+            0% {
+                opacity: 0.5;
+                transform: translateY(10px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
 
-    .hero::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url('https://source.unsplash.com/1600x900/?technology');
-      background-size: cover;
-      background-position: center;
-      opacity: 0.3;
-      z-index: -1;
-    }
-
-    .hero h1 {
-      font-size: 4rem;
-      margin-bottom: 15px;
-      animation: fadeInDown 1s ease;
-    }
-
-    .hero p {
-      font-size: 1.5rem;
-      max-width: 700px;
-      margin: 20px auto;
-      animation: fadeInUp 1s ease;
-    }
-
-    .hero a {
-      display: inline-block;
-      padding: 12px 30px;
-      font-size: 1.2rem;
-      background-color: white;
-      color: #4facfe;
-      text-decoration: none;
-      border-radius: 50px;
-      font-weight: bold;
-      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-      transition: background-color 0.3s, color 0.3s;
-      animation: fadeInUp 1.5s ease;
-    }
-
-    .hero a:hover {
-      background-color: #4facfe;
-      color: white;
-    }
-
-    @keyframes fadeInDown {
-      0% { opacity: 0; transform: translateY(-20px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes fadeInUp {
-      0% { opacity: 0; transform: translateY(20px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
-    /* Hakkımda */
-    .about {
-      padding: 100px 20px;
-      text-align: center;
-      background-color: #1e1e1e;
-      color: #ccc;
-    }
-
-    .about h2 {
-      font-size: 3rem;
-      margin-bottom: 30px;
-      color: #4facfe;
-      position: relative;
-      display: inline-block;
-    }
-
-    .about h2::after {
-      content: "";
-      position: absolute;
-      bottom: -10px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 50px;
-      height: 4px;
-      background-color: #4facfe;
-      border-radius: 2px;
-    }
-
-    .about p {
-      max-width: 800px;
-      margin: 0 auto;
-      font-size: 1.2rem;
-      line-height: 1.8;
-    }
-
-    /* Kartlar */
-    .cards {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      margin-top: 40px;
-      flex-wrap: wrap;
-    }
-
-    .card {
-      background: #2a2a2a;
-      border-radius: 15px;
-      padding: 20px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      width: 300px;
-      text-align: center;
-      transition: transform 0.3s;
-    }
-
-    .card:hover {
-      transform: translateY(-10px);
-    }
-
-    .card h3 {
-      color: #4facfe;
-      margin-bottom: 15px;
-    }
-
-    .card p {
-      font-size: 1rem;
-      color: #bbb;
-    }
-
-    /* Footer */
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #0f0f0f;
-      color: white;
-      margin-top: 50px;
-      font-size: 1rem;
-    }
-
-    footer a {
-      color: #4facfe;
-      text-decoration: none;
-    }
-
-    footer a:hover {
-      text-decoration: underline;
-    }
-  </style>
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+        .scroll-down:hover {
+            color: #ff9e2c;
+        }
+    </style>
+    <!-- Google Fonts for custom fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;500&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-
-  <!-- Navbar -->
-  <nav id="navbar">
-    <div class="logo">mehmet12ws</div>
-    <div>
-      <a href="#">Ana Sayfa</a>
-      <a href="#about">Hakkımda</a>
-      <a href="#contact">İletişim</a>
+    <div class="container">
+        <h1>Hayat Olmasada</h1>
+        <p>Seninle Güzel</p>
+        <div class="scroll-down">↓ Kaydırın ↓</div>
     </div>
-  </nav>
-
-  <!-- Hero -->
-  <section class="hero">
-    <h1>mehmet12ws</h1>
-    <p>Hayat olmasa da seninle güzel.</p>
-    <a href="#about">Hakkımda Daha Fazla</a>
-  </section>
-
-  <!-- Hakkımda -->
-  <section id="about" class="about">
-    <h2>Hakkımda</h2>
-    <p>Merhaba! Ben Mehmet. Web tasarımı ve yazılım geliştirme alanında çalışıyorum. Teknolojiye olan ilgimle her zaman yaratıcı ve yenilikçi projeler geliştirmek için çalışıyorum.</p>
-    <div class="cards">
-      <div class="card">
-        <h3>Web Tasarımı</h3>
-        <p>Kullanıcı dostu ve modern web siteleri oluşturuyorum.</p>
-      </div>
-      <div class="card">
-        <h3>Yazılım Geliştirme</h3>
-        <p>Farklı platformlar için etkili çözümler geliştiriyorum.</p>
-      </div>
-      <div class="card">
-        <h3>SEO ve Optimizasyon</h3>
-        <p>Web sitenizin arama motorlarında üst sıralara çıkmasına yardımcı oluyorum.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <<p>© 2025 mehmet12ws. Tüm Hakları Saklıdır. <a href="#navbar">Yukarı Çık</a></p>
-  </footer>
-
-  <script>
-    // Navbar Scroll Effect
-    const navbar = document.getElementById('navbar');
-    window.addEventListener('scroll', () => {
-      if (window.scrollY > 50) {
-        navbar.classList.add('scrolled');
-      } else {
-        navbar.classList.remove('scrolled');
-      }
-    });
-  </script>
 </body>
 </html>
