--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         .container {
             text-align: center;
             color: white;
-            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+            text-shadow: 2px 2px 20px rgba(0, 0, 0, 0.4);
             animation: fadeInContainer 2s ease-out;
         }
 
@@ -51,7 +51,7 @@
 
         h1 {
             font-family: 'Dancing Script', cursive;
-            font-size: 4rem;
+            font-size: 5rem;
             letter-spacing: 2px;
             animation: fadeInText 3s ease-out, glowText 1.5s infinite alternate;
             color: #fff;
@@ -73,7 +73,7 @@
                 text-shadow: 0 0 10px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.7);
             }
             50% {
-                text-shadow: 0 0 20px rgba(255, 255, 255, 0.7), 0 0 30px rgba(255, 255, 255, 1);
+                text-shadow: 0 0 30px rgba(255, 255, 255, 1), 0 0 40px rgba(255, 255, 255, 1);
             }
             100% {
                 text-shadow: 0 0 10px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.7);
@@ -82,13 +82,13 @@
 
         p {
             font-family: 'Roboto', sans-serif;
-            font-size: 1.8rem;
+            font-size: 2rem;
             margin-top: 20px;
             letter-spacing: 1px;
             opacity: 0;
             animation: fadeInText 3s ease-out 1s forwards;
             color: #fff;
-            text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+            text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
         }
 
         .background-shapes {
@@ -106,14 +106,14 @@
 
         .shape {
             position: absolute;
-            opacity: 0.2;
+            opacity: 0.15;
             animation: shapePulse 3s infinite ease-in-out;
             animation-duration: 3s;
         }
 
         .shape1 {
-            width: 200px;
-            height: 200px;
+            width: 250px;
+            height: 250px;
             background-color: rgba(255, 255, 255, 0.3);
             clip-path: polygon(50% 0%, 0% 100%, 100% 100%); /* Kalp şekli */
             animation-delay: 0s;
@@ -121,8 +121,8 @@
         }
 
         .shape2 {
-            width: 250px;
-            height: 250px;
+            width: 300px;
+            height: 300px;
             background-color: rgba(255, 255, 255, 0.2);
             clip-path: polygon(50% 0%, 0% 100%, 100% 100%); /* Kalp şekli */
             animation-delay: 1s;
@@ -130,8 +130,8 @@
         }
 
         .shape3 {
-            width: 300px;
-            height: 300px;
+            width: 350px;
+            height: 350px;
             background-color: rgba(255, 255, 255, 0.1);
             clip-path: polygon(50% 0%, 0% 100%, 100% 100%); /* Kalp şekli */
             animation-delay: 2s;
@@ -181,30 +181,33 @@
         .image-container {
             position: relative;
             display: inline-block;
-            margin-top: 40px;
+            margin-top: 50px;
             border: 8px solid #fff;
-            padding: 20px;
-            border-radius: 20px;
-            box-shadow: 0 0 30px rgba(255, 255, 255, 0.5);
+            padding: 15px;
+            border-radius: 25px;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.7);
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
             animation: frameGlow 3s infinite alternate;
         }
 
         @keyframes frameGlow {
             0% {
-                box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+                box-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
             }
             50% {
-                box-shadow: 0 0 20px rgba(255, 255, 255, 1), 0 0 30px rgba(255, 255, 255, 0.8);
+                box-shadow: 0 0 25px rgba(255, 255, 255, 1), 0 0 35px rgba(255, 255, 255, 1);
             }
             100% {
-                box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+                box-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
             }
         }
 
         .image-container img {
-            border-radius: 15px;
-            width: 300px;
+            border-radius: 20px;
+            width: 100%;
             height: auto;
+            max-width: 500px;
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;500&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
