--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             background-size: 300% 300%;
             animation: gradientBG 10s ease infinite;
             overflow: hidden;
+            flex-direction: column;
         }
 
         @keyframes gradientBG {
@@ -36,6 +37,7 @@
             color: white;
             text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
             animation: fadeInContainer 2s ease-out;
+            z-index: 1;
         }
 
         @keyframes fadeInContainer {
@@ -189,6 +191,8 @@
             background: rgba(255, 255, 255, 0.1);
             animation: frameGlow 3s infinite alternate;
             transform: scale(1);
+            max-width: 100%;
+            width: 90%;
         }
 
         @keyframes frameGlow {
@@ -208,35 +212,45 @@
 
         .video-container video {
             border-radius: 15px;
-            width: 800px; /* Video boyutunu artırdık */
-            height: 450px; /* Yüksekliği de artırdık */
+            width: 100%;
+            height: auto;
         }
 
-        /* Metin animasyonu ve buton */
-        .scroll-down {
-            margin-top: 40px;
-            font-size: 1.2rem;
-            color: #fff;
-            text-transform: uppercase;
-            font-weight: bold;
-            letter-spacing: 1px;
-            cursor: pointer;
-            animation: scrollFade 1.5s ease-out infinite alternate;
-        }
-
-        @keyframes scrollFade {
-            0% {
-                opacity: 0.5;
-                transform: translateY(10px);
+        /* Mobil cihazlar için */
+        @media screen and (max-width: 768px) {
+            .container h1 {
+                font-size: 2.5rem; /* Mobilde daha küçük font */
             }
-            100% {
-                opacity: 1;
-                transform: translateY(0);
+
+            .container p {
+                font-size: 1.5rem; /* Mobilde daha küçük metin */
+            }
+
+            .video-container {
+                padding: 15px;
+                width: 95%;
+                margin-top: 20px;
+            }
+
+            .video-container video {
+                width: 100%;
+                height: auto;
             }
         }
 
-        .scroll-down:hover {
-            color: #ff9e2c;
+        @media screen and (max-width: 480px) {
+            .container h1 {
+                font-size: 2rem; /* Daha küçük font */
+            }
+
+            .container p {
+                font-size: 1.2rem; /* Daha küçük metin */
+            }
+
+            .video-container {
+                width: 100%;
+                margin-top: 10px;
+            }
         }
     </style>
 </head>
