--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             margin: 0;
             padding: 0;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -17,7 +18,7 @@
             background-size: 300% 300%;
             animation: gradientBG 10s ease infinite;
             overflow: hidden;
-            flex-direction: column;
+            position: relative;
         }
 
         @keyframes gradientBG {
@@ -93,106 +94,18 @@
             text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
         }
 
-        .background-shapes {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: -1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100%;
-        }
-
-        .shape {
-            position: absolute;
-            opacity: 0.2;
-            animation: shapePulse 3s infinite ease-in-out;
-            animation-duration: 3s;
-        }
-
-        .shape1 {
-            width: 200px;
-            height: 200px;
-            background-color: rgba(255, 255, 255, 0.3);
-            clip-path: polygon(50% 0%, 0% 100%, 100% 100%); /* Kalp şekli */
-            animation-delay: 0s;
-            animation-name: moveShape1;
-        }
-
-        .shape2 {
-            width: 250px;
-            height: 250px;
-            background-color: rgba(255, 255, 255, 0.2);
-            clip-path: polygon(50% 0%, 0% 100%, 100% 100%); /* Kalp şekli */
-            animation-delay: 1s;
-            animation-name: moveShape2;
-        }
-
-        .shape3 {
-            width: 300px;
-            height: 300px;
-            background-color: rgba(255, 255, 255, 0.1);
-            clip-path: polygon(50% 0%, 0% 100%, 100% 100%); /* Kalp şekli */
-            animation-delay: 2s;
-            animation-name: moveShape3;
-        }
-
-        @keyframes shapePulse {
-            0% {
-                transform: scale(1);
-            }
-            50% {
-                transform: scale(1.2);
-            }
-            100% {
-                transform: scale(1);
-            }
-        }
-
-        @keyframes moveShape1 {
-            0% {
-                transform: translate(-50%, -50%) rotate(0deg);
-            }
-            100% {
-                transform: translate(-50%, -50%) rotate(360deg);
-            }
-        }
-
-        @keyframes moveShape2 {
-            0% {
-                transform: translate(-50%, -50%) rotate(0deg);
-            }
-            100% {
-                transform: translate(-50%, -50%) rotate(-360deg);
-            }
-        }
-
-        @keyframes moveShape3 {
-            0% {
-                transform: translate(-50%, -50%) rotate(0deg);
-            }
-            100% {
-                transform: translate(-50%, -50%) rotate(360deg);
-            }
-        }
-
-        /* Video Çerçevesi */
+        /* Video kısmı */
         .video-container {
             position: relative;
             display: inline-block;
             margin-top: 40px;
-            border: 8px solid #fff;
-            padding: 30px;
-            border-radius: 25px;
-            box-shadow: 0 0 50px rgba(255, 255, 255, 0.8);
-            background: rgba(255, 255, 255, 0.1);
-            animation: frameGlow 3s infinite alternate;
-            transform: scale(1);
-            max-width: 100%;
             width: 90%;
+            max-width: 800px; /* Maksimum genişlik */
+            background-color: rgba(0, 0, 0, 0.7);
+            border-radius: 15px;
+            padding: 15px;
+            box-shadow: 0 0 50px rgba(255, 255, 255, 0.8);
+            animation: frameGlow 3s infinite alternate;
         }
 
         @keyframes frameGlow {
@@ -211,47 +124,44 @@
         }
 
         .video-container video {
-            border-radius: 15px;
+            border-radius: 10px;
             width: 100%;
             height: auto;
         }
 
-        /* Mobil cihazlar için */
+        /* Mobil uyumlu tasarım */
         @media screen and (max-width: 768px) {
-            .container h1 {
-                font-size: 2.5rem; /* Mobilde daha küçük font */
+            h1 {
+                font-size: 2.5rem;
             }
 
-            .container p {
-                font-size: 1.5rem; /* Mobilde daha küçük metin */
+            p {
+                font-size: 1.5rem;
             }
 
             .video-container {
-                padding: 15px;
-                width: 95%;
-                margin-top: 20px;
-            }
-
-            .video-container video {
                 width: 100%;
-                height: auto;
+                padding: 10px;
+                margin-top: 20px;
             }
         }
 
         @media screen and (max-width: 480px) {
-            .container h1 {
-                font-size: 2rem; /* Daha küçük font */
+            h1 {
+                font-size: 2rem;
             }
 
-            .container p {
-                font-size: 1.2rem; /* Daha küçük metin */
+            p {
+                font-size: 1.2rem;
             }
 
             .video-container {
                 width: 100%;
                 margin-top: 10px;
+                padding: 5px;
             }
         }
+
     </style>
 </head>
 <body>
@@ -260,7 +170,7 @@
         <p>Seninle Güzel</p>
     </div>
 
-    <!-- Videoyu özel çerçeve içinde yerleştirdik -->
+    <!-- Video kısmı -->
     <div class="video-container">
         <video controls>
             <source src="https://v77.tiktokcdn.com/ed04949055da6846e0f21461f3f9ea1c/677a0306/video/tos/useast2a/tos-useast2a-ve-0068c002/ogCfBL5CFkVIIyLjXGEQCJASXygefbVR4XoIwG/?a=1233&bti=NDU3ZjAwOg%3D%3D&ch=0&cr=3&dr=0&lr=tiktok_m&cd=0%7C0%7C1%7C&cv=1&br=1808&bt=904&cs=0&ds=3&ft=pfEgdMlh8Zmo0hJc5b4jVRzhJpWrKsd.&mime_type=video_mp4&qs=0&rc=NDtlZDw6ZDozOTs2Ozw0N0BpajZpcW85cmV2cTMzNzczM0AzMzFgM2JhNmAxLy5hNGFfYSNjMXE1MmRjaTVgLS1kMTZzcw%3D%3D&vvpl=1&l=20250104215636A6E0EDBB407A69CB2668&btag=e000b8000&cc=13" type="video/mp4">
@@ -268,6 +178,7 @@
         </video>
     </div>
 
+    <!-- Animasyonlu şekiller -->
     <div class="background-shapes">
         <div class="shape shape1"></div>
         <div class="shape shape2"></div>
