--- a/index.html
+++ b/index.html
@@ -3,92 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kimki</title>
+    <title>Kimki - Efsane Tasarım</title>
     <style>
-        body {
-            font-family: 'Poppins', sans-serif;
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Poppins', sans-serif;
+            background: #000;
+            color: white;
+            height: 100vh;
+            overflow: hidden;
+            position: relative;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            text-align: center;
             background: linear-gradient(45deg, #ff9a8b, #ff6a00, #ff9e2c);
             background-size: 300% 300%;
-            animation: gradientBG 10s ease infinite;
-            overflow: hidden;
+            animation: gradientBG 15s ease infinite;
         }
 
         @keyframes gradientBG {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-            100% {
-                background-position: 0% 50%;
-            }
-        }
-
-        .container {
-            text-align: center;
-            color: white;
-            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-            animation: fadeInContainer 2s ease-out;
-        }
-
-        @keyframes fadeInContainer {
-            0% {
-                opacity: 0;
-                transform: scale(0.9);
-            }
-            100% {
-                opacity: 1;
-                transform: scale(1);
-            }
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         h1 {
             font-family: 'Dancing Script', cursive;
-            font-size: 4rem;
+            font-size: 5rem;
             letter-spacing: 2px;
-            animation: fadeInText 3s ease-out, glowText 1.5s infinite alternate;
             color: #fff;
+            text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
+            animation: fadeInText 2s ease-out;
         }
 
         @keyframes fadeInText {
-            0% {
-                opacity: 0;
-                transform: translateY(50px);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes glowText {
-            0% {
-                text-shadow: 0 0 10px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.7);
-            }
-            50% {
-                text-shadow: 0 0 20px rgba(255, 255, 255, 0.7), 0 0 30px rgba(255, 255, 255, 1);
-            }
-            100% {
-                text-shadow: 0 0 10px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.7);
-            }
+            0% { opacity: 0; transform: translateY(-50px); }
+            100% { opacity: 1; transform: translateY(0); }
         }
 
         p {
-            font-family: 'Roboto', sans-serif;
-            font-size: 1.8rem;
+            font-size: 2rem;
+            color: rgba(255, 255, 255, 0.8);
             margin-top: 20px;
-            letter-spacing: 1px;
-            opacity: 0;
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
             animation: fadeInText 3s ease-out 1s forwards;
-            color: #fff;
-            text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+        }
+
+        .video-container {
+            position: relative;
+            margin-top: 40px;
+            border-radius: 20px;
+            overflow: hidden;
+            animation: scaleUp 2s ease-out;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
+        }
+
+        @keyframes scaleUp {
+            0% { transform: scale(0.9); opacity: 0; }
+            100% { transform: scale(1); opacity: 1; }
+        }
+
+        .video-container video {
+            width: 800px;
+            height: 450px;
+            border-radius: 10px;
+            filter: brightness(0.7);
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+            transition: filter 0.5s ease;
+        }
+
+        .video-container:hover video {
+            filter: brightness(1);
         }
 
         .background-shapes {
@@ -106,115 +97,97 @@
 
         .shape {
             position: absolute;
-            opacity: 0.2;
-            animation: shapePulse 3s infinite ease-in-out;
-            animation-duration: 3s;
+            opacity: 0.1;
+            animation: shapePulse 6s infinite ease-in-out;
         }
 
         .shape1 {
-            width: 200px;
-            height: 200px;
+            width: 300px;
+            height: 300px;
             background-color: rgba(255, 255, 255, 0.3);
-            clip-path: polygon(50% 0%, 0% 100%, 100% 100%); /* Kalp şekli */
+            clip-path: circle(50% at 50% 50%);
             animation-delay: 0s;
             animation-name: moveShape1;
         }
 
         .shape2 {
-            width: 250px;
-            height: 250px;
+            width: 400px;
+            height: 400px;
             background-color: rgba(255, 255, 255, 0.2);
-            clip-path: polygon(50% 0%, 0% 100%, 100% 100%); /* Kalp şekli */
+            clip-path: circle(50% at 50% 50%);
             animation-delay: 1s;
             animation-name: moveShape2;
         }
 
         .shape3 {
-            width: 300px;
-            height: 300px;
+            width: 500px;
+            height: 500px;
             background-color: rgba(255, 255, 255, 0.1);
-            clip-path: polygon(50% 0%, 0% 100%, 100% 100%); /* Kalp şekli */
+            clip-path: circle(50% at 50% 50%);
             animation-delay: 2s;
             animation-name: moveShape3;
         }
 
         @keyframes shapePulse {
-            0% {
-                transform: scale(1);
-            }
-            50% {
-                transform: scale(1.2);
-            }
-            100% {
-                transform: scale(1);
-            }
+            0% { transform: scale(1); }
+            50% { transform: scale(1.1); }
+            100% { transform: scale(1); }
         }
 
         @keyframes moveShape1 {
-            0% {
-                transform: translate(-50%, -50%) rotate(0deg);
-            }
-            100% {
-                transform: translate(-50%, -50%) rotate(360deg);
-            }
+            0% { transform: translate(-50%, -50%) rotate(0deg); }
+            100% { transform: translate(-50%, -50%) rotate(360deg); }
         }
 
         @keyframes moveShape2 {
-            0% {
-                transform: translate(-50%, -50%) rotate(0deg);
-            }
-            100% {
-                transform: translate(-50%, -50%) rotate(-360deg);
-            }
+            0% { transform: translate(-50%, -50%) rotate(0deg); }
+            100% { transform: translate(-50%, -50%) rotate(-360deg); }
         }
 
         @keyframes moveShape3 {
-            0% {
-                transform: translate(-50%, -50%) rotate(0deg);
-            }
-            100% {
-                transform: translate(-50%, -50%) rotate(360deg);
-            }
+            0% { transform: translate(-50%, -50%) rotate(0deg); }
+            100% { transform: translate(-50%, -50%) rotate(360deg); }
         }
 
-        /* Video Çerçevesi */
-        .video-container {
-            position: relative;
-            display: inline-block;
-            margin-top: 40px;
-            border: 8px solid #fff;
-            padding: 20px;
-            border-radius: 20px;
-            box-shadow: 0 0 30px rgba(255, 255, 255, 0.5);
-            animation: frameGlow 3s infinite alternate;
-        }
-
-        @keyframes frameGlow {
-            0% {
-                box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-            }
-            50% {
-                box-shadow: 0 0 20px rgba(255, 255, 255, 1), 0 0 30px rgba(255, 255, 255, 0.8);
-            }
-            100% {
-                box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-            }
-        }
-
-        .video-container video {
-            border-radius: 15px;
+        /* Parallax Scroll Effect */
+        .parallax {
+            position: fixed;
+            top: 0;
+            left: 0;
             width: 100%;
-            height: 400px;
+            height: 100%;
+            background-image: url('https://www.w3schools.com/w3images/mountains.jpg');
+            background-attachment: fixed;
+            background-size: cover;
+            z-index: -2;
         }
+
+        /* Audio */
+        audio {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            opacity: 0.3;
+            z-index: -1;
+        }
+
     </style>
 </head>
 <body>
+    <div class="parallax"></div>
+
+    <!-- Müzik çalıyor -->
+    <audio autoplay loop>
+        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
+        Your browser does not support the audio element.
+    </audio>
+
     <div class="container">
         <h1>Hayat Olmasada</h1>
         <p>Seninle Güzel</p>
     </div>
 
-    <!-- Videoyu özel çerçeve içinde yerleştirdik -->
     <div class="video-container">
         <video controls>
             <source src="https://v77.tiktokcdn.com/ed04949055da6846e0f21461f3f9ea1c/677a0306/video/tos/useast2a/tos-useast2a-ve-0068c002/ogCfBL5CFkVIIyLjXGEQCJASXygefbVR4XoIwG/?a=1233&bti=NDU3ZjAwOg%3D%3D&ch=0&cr=3&dr=0&lr=tiktok_m&cd=0%7C0%7C1%7C&cv=1&br=1808&bt=904&cs=0&ds=3&ft=pfEgdMlh8Zmo0hJc5b4jVRzhJpWrKsd.&mime_type=video_mp4&qs=0&rc=NDtlZDw6ZDozOTs2Ozw0N0BpajZpcW85cmV2cTMzNzczM0AzMzFgM2JhNmAxLy5hNGFfYSNjMXE1MmRjaTVgLS1kMTZzcw%3D%3D&vvpl=1&l=20250104215636A6E0EDBB407A69CB2668&btag=e000b8000&cc=13" type="video/mp4">
@@ -227,5 +200,6 @@
         <div class="shape shape2"></div>
         <div class="shape shape3"></div>
     </div>
+
 </body>
 </html>
