--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
             display: flex;
             justify-content: center; /* Ortalamak için */
             align-items: center;
+            margin-left: 10%; /* Sağ tarafa kaydırmak için */
         }
 
         video {
